# docs/swagger.json
@@ -49,6 +49,10 @@
     {
       "name": "Watchlist",
       "description": "WatchList Related APIS"
+    },
+    {
+      "name": "Circles",
+      "description": "User linked Circles"
     }
   ],
   "paths": {
@@ -1430,9 +1434,125 @@
 						}
 					}
 				}
+			},
+      "patch": {
+        "tags": [
+          "Circles"
+        ],
+        "description": "Update circles",
+        "summary": "Update circles",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "format": "byte"
+          },
+          {
+            "in": "body",
+            "name": "circle",
+            "description": "The circle to update.",
+            "schema": {
+              "type": "object"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Client error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "422": {
+            "description": "Client error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Client error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Circles"
+        ],
+        "description": "Create a circle",
+        "summary": "Create a circle",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        
+        "parameters": [
+          {
+            "in": "body",
+            "name": "circle",
+            "description": "The circle to create.",
+            "schema": {
+              "type": "object",
+              "required": [
+                "account_id",
+                "circle_symbol"
+              ],
+              "properties": {
+                "account_id": {
+                  "type": "string"
+                },
+                "circle_symbol": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+					"200": {
+						"description": "Success",
+						"schema": {
+							"$ref": "#/definitions/CircleResponse"
+						}
+					},
+					"400": {
+						"description": "Client error",
+						"schema": {
+							"$ref": "#/definitions/ErrorResponse"
+						}
+					},
+					"422": {
+						"description": "Client error",
+						"schema": {
+							"$ref": "#/definitions/ErrorResponse"
+						}
+					},
+					"500": {
+						"description": "Client error",
+						"schema": {
+							"$ref": "#/definitions/ErrorResponse"
+						}
+					}
+				}
 			}
 		},
-		"/v1/Circles/{id}": {
+    
+		"/v1/circles/{id}": {
 			"get": {
 				"tags": [
 					"Circles"
@@ -1487,67 +1607,7 @@
 					}
 				}
 			},
-      
-			"patch": {
-				"tags": [
-					"Circles"
-				],
-				"description": "Update circles",
-				"summary": "Update circles",
-				"produces": [
-					"application/json"
-				],
-				"consumes": [
-					"application/json"
-				],
-				"parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "type": "integer"
-          },
-          {
-            "in": "header",
-            "name": "Authorization",
-            "required": true,
-            "type": "string",
-            "format": "byte"
-          },
-          {
-            "in": "body",
-            "name": "circle",
-            "description": "The circle to update.",
-            "schema": {
-              "type": "object"
-            }
-          }
-				],
-				"responses": {
-					"204": {
-						"description": "Success"
-					},
-					"400": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					},
-					"422": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					},
-					"500": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					}
-				}
-			},
-      
+
 			"delete": {
 				"tags": [
 					"Circles"
