# model/circle.go
@@ -11,15 +11,13 @@ func init() {
 // Circle represents user domain model
 type Circle struct {
 	Base
-	CreatedAt                         *time.Time `json:"created_at,omitempty"`
-	ID                          int        `json:"id"`
-	AccountID                         string     `json:"account_id"`
-	CircleSymbol					  string	 `json:"circle_symbol"`
-	CircleName                        string     `json:"circle_name"`
-	CircleBIO                         string     `json:"circle_bio"`
-	
+	CreatedAt    *time.Time `json:"created_at,omitempty"`
+	ID           int        `json:"id,omitempty"`
+	AccountID    string     `json:"account_id"`
+	CircleSymbol string     `json:"circle_symbol,omitempty"`
+	CircleName   string     `json:"circle_name,omitempty"`
+	CircleBio    string     `json:"circle_bio,omitempty"`
 }
-
 
 // Delete updates the deleted_at field
 func (u *Circle) Delete() {
@@ -27,18 +25,19 @@ func (u *Circle) Delete() {
 	u.DeletedAt = &t
 }
 
-// Update updates the updated_at field
-func (u *Circle) Update() {
-	t := time.Now()
-	u.UpdatedAt = t
-}
+// // Update updates the updated_at field
+// func (u *Circle) CreateOrUpdate() {
+// 	t := time.Now()
+// 	u.UpdatedAt = t
+// }
 
-// CircleRepo represents user database interface (the repository)
+// UserRepo represents user database interface (the repository)
 type CircleRepo interface {
+	CreateOrUpdate(*Circle) (*Circle, error)
 	View(int) (*Circle, error)
 	List(*ListQuery, *Pagination) ([]Circle, error)
-	CreateOrUpdate(*Circle) (*Circle, error)
 	Delete(*Circle) error
+	
 
 }
 
